--- a/nginx.conf
+++ b/nginx.conf
@@ -1,26 +1,10 @@
-events {
-    worker_connections 4096;
-}
-http {
-    index index.html;
-
-    server {
+server {
 
         listen 80;
-        server_name localhost;
-        return 301 https://$server_name$request_uri;
-    }
-    server {
+        listen 443;
 
-        error_log /var/log/nginx/error.log debug;
-        listen 443 ssl;
+        index index.html;
         server_name localhost;
         root /usr/share/nginx/html;
-        ssl_certificate /etc/nginx/workcert.crt;
-        ssl_certificate_key /etc/nginx/workkey.key;
-
-        location = /favicon.ico {
-            log_not_found off;
-        }
+        return 301 https://$server_name$request_uri;
     }
-}
