--- a/nginx.conf
+++ b/nginx.conf
@@ -1,26 +1,40 @@
-events {
-    worker_connections 4096;
-}
-http {
-    index index.html;
+server {
+    listen 80;
+    listen 443;
 
-    server {
+    server_name _;
 
-        listen 80;
-        server_name localhost;
-        return 301 https://$server_name$request_uri;
-    }
-    server {
-
-        error_log /var/log/nginx/error.log debug;
-        listen 443 ssl;
-        server_name localhost;
+    location / {
         root /usr/share/nginx/html;
-        ssl_certificate /etc/nginx/workcert.crt;
-        ssl_certificate_key /etc/nginx/workkey.key;
+        index index.html index.htm;
+    }
 
-        location = /favicon.ico {
-            log_not_found off;
-        }
+    error_page 500 502 503 504 /50x.html
+    location = /503.html {
+        root /usr/share/nginx/html;
     }
 }
+
+# http {
+#     index index.html;
+
+#     server {
+
+#         listen 80;
+#         server_name localhost;
+#         return 301 https://$server_name$request_uri;
+#     }
+#     server {
+
+#         error_log /var/log/nginx/error.log debug;
+#         listen 443 ssl;
+#         server_name localhost;
+#         root /usr/share/nginx/html;
+#         ssl_certificate /etc/nginx/workcert.crt;
+#         ssl_certificate_key /etc/nginx/workkey.key;
+
+#         location = /favicon.ico {
+#             log_not_found off;
+#         }
+#     }
+# }
