nginx.conf missing ';' added

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,7 @@ server {
         index index.html index.htm;
     }
 
-    error_page 500 502 503 504 /50x.html
+    error_page 500 502 503 504 /50x.html;
     location = /503.html {
         root /usr/share/nginx/html;
     }
