--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,9 +7,8 @@ stages:
 include:
     - project: 'semester-project-e2020/team-12-continuous-integration/resources'
       ref: master
-      file: 'production.yml'
-# Set [GROUPNUMBER] to you team number ex. '[GROUPNUMBER].yml' becomes '5.yml'
-
+      file: '12.yml'
+    
 compile:
     stage: build
     image: docker:latest
