Revert "Merge branch 'testing/lint' into 'master'"
This reverts merge request !2

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,9 @@ stages:
 include:
     - project: 'semester-project-e2020/team-12-continuous-integration/resources'
       ref: master
-      file: '12.yml'
-    
+      file: 'production.yml'
+# Set [GROUPNUMBER] to you team number ex. '[GROUPNUMBER].yml' becomes '5.yml'
+
 compile:
     stage: build
     image: docker:latest
