--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 node_modules
+authServer/node_modules
 .DS_Store
 
 # Created by https://www.toptal.com/developers/gitignore/api/intellij,vscode,dotenv
