--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,29 +2,15 @@
     "env": {
         "browser": true,
         "commonjs": true,
-        "es2021": true,
-        "jest/globals": true
+        "es2021": true
     },
     "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended"
+        "standard",
+        "plugin:prettier/recommended"
     ],
-    "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": 12
     },
-    "plugins": [
-        "@typescript-eslint", "jest"
-    ],
     "rules": {
-        "require-jsdoc": ["error", {
-            "require": {
-                "FunctionDeclaration": true,
-                "MethodDefinition": true,
-                "ClassDeclaration": true,
-                "ArrowFunctionExpression": false,
-                "FunctionExpression": false
-            }
-        }]
     }
 }
