--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prettier-eslint": "^11.0.0"
   },
   "dependencies": {
+    "@types/node": "^14.14.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
