node project structure fix

--- a/authServer/package.json
+++ b/authServer/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "devStart": "nodemon server.js",
     "test": "lint"
   },
   "repository": {
