--- a/reverse_proxy/nginx.conf
+++ b/reverse_proxy/nginx.conf
@@ -1,28 +1,20 @@
-events{
-	
-}
-
-http{
+# http{
+	upstream dynamic { server 127.0.0.1; }
 	server {
 		listen 80 default_server;
 		server_name _;
 		return 301 https://$host$request_uri;
-	}
+	}  
 	server {
 		listen 443 ssl;
 		server_name _;
-		ssl_certificate certs/nginx-selfsigned.crt;
-		ssl_certificate_key certs/nginx-selfsigned.key;
+		ssl_certificate selfsigned_cert.crt
+		ssl_certificate_key private_key.key;
 		ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
 		ssl_prefer_server_ciphers on;
 		ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DHE+AES128:!ADH:!AECDH:!MD5;
 		location / {
-			proxy_pass http://app/;
-		}
-		
+			proxy_pass http://127.0.0.1/;
+		}	
 	}
-
-
-
-
-}
+# }  
