bugfix: proxy builds and runs fine now

--- a/reverse_proxy/nginx.conf
+++ b/reverse_proxy/nginx.conf
@@ -1,5 +1,9 @@
-# http{
-	upstream dynamic { server 127.0.0.1; }
+events{
+
+}
+ 
+http{
+	upstream dynamic { server app; }
 	server {
 		listen 80 default_server;
 		server_name _;
@@ -14,7 +18,7 @@
 		ssl_prefer_server_ciphers on;
 		ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DHE+AES128:!ADH:!AECDH:!MD5;
 		location / {
-			proxy_pass http://127.0.0.1/;
+			proxy_pass http://app/;
 		}	
 	}
-# }  
+}  
