--- a/reverse_proxy/Dockerfile
+++ b/reverse_proxy/Dockerfile
@@ -2,7 +2,7 @@ FROM nginx:latest
 
 EXPOSE 80 443
 
-ADD nginx.conf /etc/nginx/conf.d/sp2020.conf
+ADD nginx.conf /etc/nginx/sp2020.conf
 ADD cert_key/nginx-selfsigned.key /etc/nginx/private_key.key
 ADD cert_key/nginx-selfsigned.crt /etc/nginx/selfsigned_cert.crt
 ADD html/ /usr/share/nginx/html
