--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,57 +1,56 @@
-version: "3"
+version: '3'
 services:
-  nginx:
-    build:
-      Context: ./pathToDockerfile/
-      dockerfile: dockerfileNameOfNginxDockerFile_Not_necersary
-      args:
-        buildno: 1
-    ports:
-      - 80:80
-      - 443:443
-    volumes:
-      - ./reverse_proxy/cert_key/:/etc/nginx/certs
-      - ./reverse_proxy/nginx.conf:/etc/nginx/nginx.conf
-      - ./html/:/usr/share/nginx/html/
-    networks:
-      - frontEndNetwork
+    nginx:
+        build:
+            context: ./reverse_proxy/
+            #dockerfile: dockerfileNameOfNginxDockerFile_Not_necersary
+            args:
+                buildno: 1
+        ports:
+            - 80:80
+            - 443:443
+        volumes:
+            - ./reverse_proxy/cert_key/:/etc/nginx/certs
+            - ./reverse_proxy/nginx.conf:/etc/nginx/nginx.conf
+            - ./html/:/usr/share/nginx/html/
+        networks:
+            - frontEndNetwork
 
-  authService:
-    build: 
-      Context: ./pathToDockerfile/
-      dockerfile: dockerfileNameOfNginxDockerFile_Not_necersary
-      args:
-        buildno: 1
-    expose: 
-      - "3300"
-    networks:
-      - frontEndNetwork
-      - backEndNetwork
+    authservice:
+        build:
+            context: ./authServer/
+            #dockerfile: dockerfileNameOfNginxDockerFile_Not_necersary
+            args:
+                buildno: 1
+        expose:
+            - '3300'
+        networks:
+            - frontEndNetwork
+            - backEndNetwork
 
-  gmailService:
-    build: 
-      context: ./pathToDockerfile/
-      dockerfile: dockerfileNameOfNginxDockerFile_Not_necersary
-      args:
-        buildno: 1
-    expose: 
-      - "8081"
-    networks:
-      - frontEndNetwork
-      - backEndNetwork
-  
-  userAPIService:
-    build: 
-      context: ./pathToDockerfile/
-      dockerfile: dockerfileNameOfNginxDockerFile_Not_necersary
-      args:
-        buildno: 1
-    expose: 
-      - "8082"
-    networks:
-      - backEndNetwork
+    gmailservice:
+        build:
+            context: ./gmailserver/
+            #dockerfile: dockerfileNameOfNginxDockerFile_Not_necersary
+            args:
+                buildno: 1
+        expose:
+            - '8081'
+        networks:
+            - frontEndNetwork
+            - backEndNetwork
 
+    userapiservice:
+        build:
+            context: ./userAPI/
+            #dockerfile: dockerfileNameOfNginxDockerFile_Not_necersary
+            args:
+                buildno: 1
+        expose:
+            - '8082'
+        networks:
+            - backEndNetwork
 
 networks:
-  aNetwork:
-  bNetwork:
+    frontEndNetwork:
+    backEndNetwork:
