--- a/reverse_proxy/nginx.conf
+++ b/reverse_proxy/nginx.conf
@@ -3,7 +3,7 @@ events{
 }
  
 http{
-	upstream dynamic { server app; }
+	upstream dynamic { server 127.0.0.1; }
 	server {
 		listen 80 default_server;
 		server_name _;
@@ -12,13 +12,13 @@ http{
 	server {
 		listen 443 ssl;
 		server_name _;
-		ssl_certificate selfsigned_cert.crt
+		ssl_certificate selfsigned_cert.crt;
 		ssl_certificate_key private_key.key;
 		ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
 		ssl_prefer_server_ciphers on;
 		ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DHE+AES128:!ADH:!AECDH:!MD5;
 		location / {
-			proxy_pass http://app/;
+			proxy_pass http://127.0.0.1/;
 		}	
 	}
 }  
