--- a/userAPI/Dockerfile
+++ b/userAPI/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:latest
 WORKDIR /app
 COPY package.json /app
-RUN npm install 
+RUN npm install -y
 COPY . /app
 CMD ["node", "usersAPI.js"]
