--- a/gmailserver/package.json
+++ b/gmailserver/package.json
@@ -5,8 +5,10 @@
   "main": "withgmail.js",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.14",
     "url-crypt": "^1.2.1"
   },
