--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,54 +3,37 @@ services:
     nginx:
         build:
             context: ./reverse_proxy/
-            #dockerfile: dockerfileNameOfNginxDockerFile_Not_necersary
-            args:
-                buildno: 1
+# Expose is defined as: Ports are not exposed to host machines, only exposed to other services. 
+# ports: Activates the container to listen for specified port(s) from the world outside of the 
+# docker(can be same host machine or a different machine) AND also accessible world inside docker
         ports:
             - 80:80
             - 443:443
+            - 3030:3030
+            - 3031:3031
+            - 3032:3032
         volumes:
             - ./reverse_proxy/cert_key/:/etc/nginx/certs
             - ./reverse_proxy/nginx.conf:/etc/nginx/nginx.conf
             - ./html/:/usr/share/nginx/html/
-        networks:
-            - frontEndNetwork
+ 
 
     authservice:
         build:
             context: ./authServer/
-            #dockerfile: dockerfileNameOfNginxDockerFile_Not_necersary
-            args:
-                buildno: 1
         expose:
             - '3300'
-        networks:
-            - frontEndNetwork
-            - backEndNetwork
-
+ 
     gmailservice:
         build:
             context: ./gmailserver/
-            #dockerfile: dockerfileNameOfNginxDockerFile_Not_necersary
-            args:
-                buildno: 1
         expose:
             - '8081'
-        networks:
-            - frontEndNetwork
-            - backEndNetwork
 
     userapiservice:
         build:
             context: ./userAPI/
-            #dockerfile: dockerfileNameOfNginxDockerFile_Not_necersary
-            args:
-                buildno: 1
         expose:
             - '8082'
-        networks:
-            - backEndNetwork
 
-networks:
-    frontEndNetwork:
-    backEndNetwork:
+
