--- a/reverse_proxy/nginx.conf
+++ b/reverse_proxy/nginx.conf
@@ -1,35 +1,24 @@
- events {
+events { }
 
+  http{
+    upstream dynamic { server 127.0.0.1; 
     }
-    
-    http {
-      upstream dynamic { server 127.0.0.1; }
-
-      # Listens for HTTP, rewrites to HTTPS
       server {
-        listen 3030 default_server;
-        server_name _;
-        return 301 https://$host$request_uri;
+          listen 80 default_server;
+          server_name _;
+          return 301 https://$host$request_uri;
       }
-
       server {
-        listen 3031 default_server;
+        listen 443 ssl;
         server_name _;
-        return 301 https://$host$request_uri;
-      }
-
-        # Listens for HTTPS and proxies the request to port 3300
-      server {
-        listen 3030 ssl;
-        server_name _;
-        ssl_certificate certificate.crt;
-        ssl_certificate_key private.key;
-        ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
+        ssl_certificate certs/nginx-selfsigned.crt;
+        ssl_certificate_key certs/nginx-selfsigned.key;
+        ssl_protocols TLSv1.2 TLSv1.3;
         ssl_prefer_server_ciphers on;
         ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DHE+AES128:!ADH:!AECDH:!MD5;
 
         location / {
-          proxy_pass http://auth-server:3300/;
+          proxy_pass http://authservice:3300/;
           proxy_http_version 1.1;
           proxy_cache_bypass $http_upgrade;
           proxy_set_header Upgrade $http_upgrade;
@@ -37,19 +26,8 @@
           proxy_set_header Host $host;
           proxy_pass_header Server;
         }
-      }
-
-      server {
-        listen 3031 ssl;
-        server_name _;
-        ssl_certificate certificate.crt;
-        ssl_certificate_key private.key;
-        ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
-        ssl_prefer_server_ciphers on;
-        ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DHE+AES128:!ADH:!AECDH:!MD5;
-
-        location / {
-          proxy_pass http://gmail-server:8081/;
+        location /gmail {
+          proxy_pass http://gmailservice:8081/;
           proxy_http_version 1.1;
           proxy_cache_bypass $http_upgrade;
           proxy_set_header Upgrade $http_upgrade;
@@ -57,5 +35,5 @@
           proxy_set_header Host $host;
           proxy_pass_header Server;
         }
-      }
-    }
+  }
+}
