--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
         "es2021": true
     },
     "extends": [
-        "standard",
+        //"standard",
         "prettier/recommended",
         "prettier/flowtype",
         "prettier/react",
