--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,10 +6,11 @@
     },
     "extends": [
         //"standard",
-        "prettier/recommended",
-        "prettier/flowtype",
-        "prettier/react",
-        "prettier/standard"
+       // "prettier/recommended",
+       // "prettier/flowtype",
+       // "prettier/react",
+       // "prettier/standard"
+       "prettier"
     ],
     "parserOptions": {
         "ecmaVersion": 2020
