--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,12 +5,11 @@
         "es2021": true
     },
     "extends": [
-        //"standard",
-       // "prettier/recommended",
-       // "prettier/flowtype",
-       // "prettier/react",
-       // "prettier/standard"
-       "prettier"
+        "standard",
+        "prettier/recommended",
+        "prettier/flowtype",
+        "prettier/react",
+        "prettier/standard"
     ],
     "parserOptions": {
         "ecmaVersion": 2020
