--- a/gmailserver/package.json
+++ b/gmailserver/package.json
@@ -8,6 +8,7 @@
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "https": "^1.0.0",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.14",
     "url-crypt": "^1.2.1"
