chore: updates made to nginx

--- a/reverse_proxy/nginx.conf
+++ b/reverse_proxy/nginx.conf
@@ -1,5 +1,8 @@
-events { }
-
+events { } 
+# The “events” context is contained within the “main” context. 
+# It is used to set global options that affect how Nginx handles connections at a general level. 
+# There can only be a single events context defined within the Nginx configuration.        
+  
   http{
     upstream dynamic { server 127.0.0.1; 
     }
@@ -15,7 +18,7 @@ events { }
         ssl_certificate_key certs/nginx-selfsigned.key;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_prefer_server_ciphers on;
-        ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DHE+AES128:!ADH:!AECDH:!MD5;
+        ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA512:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA512:ECDHE-ECDSA-AES256-CBC-SHA512:ECDHE-ECDSA-AES128-CBC-SHA512:ECDHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-RSA-AES128-GCM-SHA512:ECDHE-RSA-AES256-CBC-SHA512:ECDHE-RSA-AES128-CBC-SHA512:;
 
         location / {
           proxy_pass http://authservice:3300/;
