--- a/reverse_proxy/nginx.conf
+++ b/reverse_proxy/nginx.conf
@@ -29,7 +29,7 @@ events { }
           proxy_set_header Host $host;
           proxy_pass_header Server;
         }
-        location /gmail {
+        location /gmail/ {
           proxy_pass http://gmailservice:8081/;
           proxy_http_version 1.1;
           proxy_cache_bypass $http_upgrade;
