--- a/reverse_proxy/nginx.conf
+++ b/reverse_proxy/nginx.conf
@@ -8,12 +8,12 @@ events { }
     }
       server {
           listen 80 default_server;
-          server_name kubuntu.stream.stud-srv.sdu.dk;
+          server_name _;
           return 301 https://$host$request_uri;
       }
       server {
         listen 443 ssl;
-        server_name kubuntu.stream.stud-srv.sdu.dk;
+        server_name _;
         ssl_certificate certs/nginx-selfsigned.crt;
         ssl_certificate_key certs/nginx-selfsigned.key;
         ssl_protocols TLSv1.2 TLSv1.3;
