Feat: UserAPI works in docker-compose and together with gmailserver

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,3 +26,13 @@ services:
             context: ./gmailserver/
         expose:
             - '8081'
+
+    usersservice:
+        build:
+            context: ./UsersAPI/
+        expose:
+            - '9090'
+
+networks:
+    backend:
+        driver: bridge
