--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-    name: auth-server
+    name: service01
 spec:
     selector:
         # This app must match the label of the pods.
@@ -23,7 +23,6 @@ spec:
     template:
         metadata:
             annotations:
-                sidecar.istio.io/inject: 'false'
             labels:
                 app: auth-server
         spec:
@@ -54,7 +53,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-    name: gmail-server
+    name: service02
 spec:
     selector:
         # This app must match the label of the pods.
@@ -76,7 +75,6 @@ spec:
     template:
         metadata:
             annotations:
-                sidecar.istio.io/inject: 'false'
             labels:
                 app: gmail-server
         spec:
