--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,9 +33,9 @@ compile-master:
     before_script:
         - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
     script:
-        - docker build --pull -t "$CI_REGISTRY_IMAGE-auth-server" ./authServer/
-        - docker push "$CI_REGISTRY_IMAGE-auth-server"
-        - docker build --pull -t "$CI_REGISTRY_IMAGE-gmail-server" ./gmailserver/
-        - docker push "$CI_REGISTRY_IMAGE-gmail-server"
+        - docker build --pull -t "$CI_REGISTRY_IMAGE:auth-server" ./authServer/
+        - docker push "$CI_REGISTRY_IMAGE:auth-server"
+        - docker build --pull -t "$CI_REGISTRY_IMAGE:gmail-server" ./gmailserver/
+        - docker push "$CI_REGISTRY_IMAGE:gmail-server"
     only:
         - master
