--- a/reverse_proxy/nginx.conf
+++ b/reverse_proxy/nginx.conf
@@ -21,6 +21,15 @@ events { }
         ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA512:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA512:ECDHE-ECDSA-AES256-CBC-SHA512:ECDHE-ECDSA-AES128-CBC-SHA512:ECDHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-RSA-AES128-GCM-SHA512:ECDHE-RSA-AES256-CBC-SHA512:ECDHE-RSA-AES128-CBC-SHA512:;
 
         location / {
+          proxy_pass http://frontend:8090/;
+          proxy_http_version 1.1;
+          proxy_cache_bypass $http_upgrade;
+          proxy_set_header Upgrade $http_upgrade;
+          proxy_set_header Connection 'upgrade';
+          proxy_set_header Host $host;
+          proxy_pass_header Server;
+        }
+        location /auth/ {
           proxy_pass http://authservice:3300/;
           proxy_http_version 1.1;
           proxy_cache_bypass $http_upgrade;
