chore: html redirecting done on nginx

--- a/reverse_proxy/nginx.conf
+++ b/reverse_proxy/nginx.conf
@@ -22,7 +22,9 @@ events { }
 
 
         location / {
-          
+          root /usr/share/nginx/html;
+          index /login/login-page.html;
+
         }
         location /front/ {
           proxy_pass http://frontend:8090/;
