fix: ready for test implementation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,9 +27,9 @@ services:
         expose:
             - '8081'
 
-    usersservice:
+    userservice:
         build:
-            context: ./UsersAPI/
+            context: ./userAPI/
         expose:
             - '9090'
 
