--- a/gmailserver/.env
+++ b/gmailserver/.env
@@ -5,10 +5,10 @@ HYPERLINK_IN_EMAIL_MOCKUP=http://localhost/front/reset
 SERVER_EMAIL=cstgruppe10@gmail.com
 
 POST_NEW_PASSWORD=http://redhat.stream.stud-srv.sdu.dk/newPassword
-POST_NEW_PASSWORD_MOCKUP=http://usersservice:9090/newPassword
+POST_NEW_PASSWORD_MOCKUP=http://userservice:9090/newPassword
 
 IS_USER=http://redhat.stream.stud-srv.sdu.dk/isUser
-IS_USER_MOCKUP=http://usersservice:9090/isUser
+IS_USER_MOCKUP=http://userservice:9090/isUser
 
 SERVER_EMAIL_PASSWORD=P3J2z3YLwDHe
 SALT=foobar
