--- a/userAPI/package.json
+++ b/userAPI/package.json
@@ -11,5 +11,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^7.0.0",
+    "prettier": "2.2.1"
   }
 }
