chore: mockup test password reset

--- a/gmailserver/.env
+++ b/gmailserver/.env
@@ -7,8 +7,8 @@ SERVER_EMAIL=cstgruppe10@gmail.com
 POST_NEW_PASSWORD=http://kubuntu.stream.stud-srv.sdu.dk/service04/newPassword
 POST_NEW_PASSWORD_MOCKUP=http://userservice:9090/newPassword
 
-IS_USER=http://kubuntu.stream.stud-srv.sdu.dk/service04/isUser
-IS_USER_MOCKUP=http://userservice:9090/isUser
+IS_USER_MOCK=http://kubuntu.stream.stud-srv.sdu.dk/service04/isUser
+IS_USER_MOCKUP_COMPOSE=http://userservice:9090/isUser
 
 SERVER_EMAIL_PASSWORD=P3J2z3YLwDHe
 SALT=foobar
