--- a/MediaAcquisition/requirements.txt
+++ b/MediaAcquisition/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==2.0.7
 Django==3.2.9
 django-probes==1.6.0
 djangorestframework==3.12.4
+django-cors-headers==3.10.0
 idna==3.3
 mutagen==1.45.1
 mysqlclient==2.0.3
