--- a/MediaAcquisition/docker-compose.yml
+++ b/MediaAcquisition/docker-compose.yml
@@ -7,7 +7,7 @@ services:
   web:
     build: .
     links:
-      - "db:database"
+      - "db:mysql"
     ports:
       - "8000:8000"
     depends_on:
